Fix: Configurar healthcheck para Railway - perfil prod y timeout aumentado

--- a/agrogestion-backend/src/main/resources/application-prod.properties
+++ b/agrogestion-backend/src/main/resources/application-prod.properties
@@ -34,7 +34,7 @@ springdoc.swagger-ui.operationsSorter=method
 
 # Configuración de Actuator
 management.endpoints.web.exposure.include=health,info,metrics
-management.endpoint.health.show-details=when-authorized
+management.endpoint.health.show-details=always
 
 # Configuración de validación
 spring.validation.enabled=true
