--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -30,9 +30,6 @@ RUN mvn clean package -DskipTests
 # Etapa de ejecución
 FROM openjdk:17-jdk-slim
 
-# Instalar curl para healthcheck
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
-
 # Crear usuario no-root
 RUN addgroup --system spring && adduser --system spring --ingroup spring
 USER spring:spring
@@ -46,9 +43,9 @@ COPY --from=build /app/target/*.jar app.jar
 # Exponer puerto
 EXPOSE 8080
 
-# Healthcheck
+# Healthcheck usando wget (incluido en la imagen base)
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:8080/health || exit 1
+  CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
 
 # Ejecutar la aplicación
 ENTRYPOINT ["java", "-Dspring.profiles.active=test", "-jar", "/app/app.jar"]
