Fix: Dockerfile simple con Eclipse Temurin para evitar problemas de conectividad

--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -1,8 +1,11 @@
-# Dockerfile para AgroCloud Backend
-FROM maven:3.9.5-eclipse-temurin-17 AS build
+# Dockerfile simple para AgroCloud Backend
+FROM eclipse-temurin:17-jdk-alpine
 
 # Establecer directorio de trabajo
 WORKDIR /app
+
+# Instalar Maven y wget
+RUN apk add --no-cache maven wget
 
 # Copiar archivos de configuración de Maven
 COPY agrogestion-backend/pom.xml .
@@ -13,17 +16,6 @@ COPY agrogestion-backend/src src
 # Compilar la aplicación con Maven
 RUN mvn clean package -DskipTests
 
-# Segunda etapa: Runtime
-FROM eclipse-temurin:17-jre-alpine
-
-WORKDIR /app
-
-# Instalar wget para healthcheck
-RUN apk add --no-cache wget
-
-# Copiar el JAR compilado desde la etapa de build
-COPY --from=build /app/target/agrocloud-backend-1.0.0.jar app.jar
-
 # Exponer puerto
 EXPOSE 8080
 
@@ -32,4 +24,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:8080/ || exit 1
 
 # Ejecutar la aplicación con perfil Railway
-ENTRYPOINT ["java", "-Dspring.profiles.active=railway", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=railway", "-jar", "target/agrocloud-backend-1.0.0.jar"]
