Configuración MySQL local y Railway - Manual de usuario actualizado

--- a/agrogestion-backend/src/main/resources/application-railway-mysql.properties
+++ b/agrogestion-backend/src/main/resources/application-railway-mysql.properties
@@ -1,25 +1,22 @@
 # Configuración del servidor
-server.port=8080
+server.port=${PORT:8080}
 server.servlet.context-path=/
 
-# Configuración de la base de datos H2
-spring.datasource.url=jdbc:h2:mem:agroclouddb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Configuración de la base de datos MySQL para Railway
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
-# Configuración de JPA/Hibernate para H2
-spring.jpa.hibernate.ddl-auto=create-drop
+# Configuración de JPA/Hibernate para MySQL en producción
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-# Habilitar consola H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 # Configuración de JWT
-jwt.secret=agrogestionSecretKey2024ForJWTTokenGenerationAndValidation
+jwt.secret=${JWT_SECRET:agrogestionSecretKey2024ForJWTTokenGenerationAndValidation}
 jwt.expiration=86400000
 jwt.refresh-token.expiration=604800000
 
@@ -52,5 +49,5 @@ spring.servlet.multipart.max-request-size=10MB
 # Configuración de caché
 spring.cache.type=simple
 
-# Configuración de sesiones (no necesaria con JWT, pero por si acaso)
+# Configuración de sesiones
 spring.session.store-type=none
