--- a/agrogestion-backend/src/main/resources/application-mysql.properties
+++ b/agrogestion-backend/src/main/resources/application-mysql.properties
@@ -2,21 +2,18 @@
 server.port=8080
 server.servlet.context-path=/
 
-# Configuración de la base de datos H2
-spring.datasource.url=jdbc:h2:mem:agroclouddb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Configuración de la base de datos MySQL para desarrollo local (XAMPP)
+spring.datasource.url=jdbc:mysql://localhost:3306/agrocloud?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=agrocloudbd
+spring.datasource.password=Jones1212
 
-# Configuración de JPA/Hibernate para H2
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-# Habilitar consola H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Configuración de JPA/Hibernate para MySQL
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 # Configuración de JWT
 jwt.secret=agrogestionSecretKey2024ForJWTTokenGenerationAndValidation
@@ -26,7 +23,7 @@ jwt.refresh-token.expiration=604800000
 # Configuración de logging
 logging.level.com.agrocloud=INFO
 logging.level.org.springframework.security=WARN
-logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.SQL=INFO
 
 # Configuración de OpenAPI/Swagger
 springdoc.api-docs.path=/v3/api-docs
@@ -52,5 +49,5 @@ spring.servlet.multipart.max-request-size=10MB
 # Configuración de caché
 spring.cache.type=simple
 
-# Configuración de sesiones (no necesaria con JWT, pero por si acaso)
+# Configuración de sesiones
 spring.session.store-type=none
