Fix: Mejorar configuración de healthcheck y puertos para Railway

--- a/agrogestion-backend/src/main/resources/application-railway-mysql.properties
+++ b/agrogestion-backend/src/main/resources/application-railway-mysql.properties
@@ -2,6 +2,9 @@
 server.port=${PORT:8080}
 server.servlet.context-path=/
 
+# Configuración específica para Railway
+spring.application.name=agrocloud-backend
+
 # Configuración de la base de datos MySQL para Railway
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
