Fix: Corregir copia del JAR en Dockerfile para Railway

--- a/agrogestion-backend/src/main/resources/application-railway-h2.properties
+++ b/agrogestion-backend/src/main/resources/application-railway-h2.properties
@@ -5,6 +5,13 @@ server.servlet.context-path=/
 # Configuración específica para Railway
 spring.application.name=agrocloud-backend
 
+# Configuración de logging para debugging
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.web.embedded.tomcat=DEBUG
+
+# Configuración específica para Railway
+spring.application.name=agrocloud-backend
+
 # Configuración de la base de datos H2 (sin MySQL)
 spring.datasource.url=jdbc:h2:mem:agrocloud
 spring.datasource.driver-class-name=org.h2.Driver
