--- a/agrogestion-backend/src/main/resources/application-railway-mysql.properties
+++ b/agrogestion-backend/src/main/resources/application-railway-mysql.properties
@@ -54,3 +54,6 @@ spring.cache.type=simple
 
 # Configuración de sesiones
 spring.session.store-type=none
+
+# Permitir referencias circulares temporalmente
+spring.main.allow-circular-references=true
