--- a/agrogestion-backend/src/main/resources/application-railway-h2.properties
+++ b/agrogestion-backend/src/main/resources/application-railway-h2.properties
@@ -66,3 +66,6 @@ spring.cache.type=simple
 
 # Configuración de sesiones
 spring.session.store-type=none
+
+# Permitir referencias circulares temporalmente
+spring.main.allow-circular-references=true
