Fix: Mejorar configuración MySQL con valores por defecto y corregir dialect

--- a/agrogestion-backend/src/main/resources/application-railway-mysql.properties
+++ b/agrogestion-backend/src/main/resources/application-railway-mysql.properties
@@ -6,16 +6,16 @@ server.servlet.context-path=/
 spring.application.name=agrocloud-backend
 
 # Configuración de la base de datos MySQL para Railway
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/railway}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:}
 
 # Configuración de JPA/Hibernate para MySQL en producción
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 # Configuración de JWT
