Force: Forzar nuevo despliegue con URL MySQL corregida

--- a/agrogestion-backend/src/main/resources/application-railway-mysql.properties
+++ b/agrogestion-backend/src/main/resources/application-railway-mysql.properties
@@ -3,7 +3,7 @@ server.port=${PORT:8080}
 server.servlet.context-path=/
 
 # Configuración específica para Railway
-spring.application.name=agrocloud-backend
+spring.application.name=agrocloud-backend-railway-mysql
 
 # Configuración de la base de datos MySQL para Railway
 # Usar valores hardcodeados temporalmente para debugging
