--- a/agrogestion-frontend/vercel.json
+++ b/agrogestion-frontend/vercel.json
@@ -16,6 +16,6 @@
     }
   ],
   "env": {
-    "VITE_API_BASE_URL": "https://tu-backend-railway.up.railway.app/api"
+    "VITE_API_BASE_URL": "https://agrocloud-backend-production-xxxx.up.railway.app/api"
   }
 }
