--- a/.github/workflows/maven-tests.yml
+++ b/.github/workflows/maven-tests.yml
@@ -20,10 +20,10 @@ jobs:
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping"
+          --health-cmd="mysqladmin ping -h localhost -u root -p${{ secrets.DB_PASS }}"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=3
+          --health-retries=5
 
     steps:
     - name: Checkout code
@@ -38,14 +38,28 @@ jobs:
         
     - name: Wait for MySQL
       run: |
-        while ! mysqladmin ping -h"127.0.0.1" -P3306 -u"root" -p"${{ secrets.DB_PASS }}" --silent; do
-          echo "Waiting for MySQL..."
+        echo "Esperando a que MySQL esté listo..."
+        for i in {1..30}; do
+          if mysqladmin ping -h"127.0.0.1" -P3306 -u"root" -p"${{ secrets.DB_PASS }}" --silent; then
+            echo "MySQL está listo!"
+            break
+          fi
+          echo "Intento $i/30: MySQL no está listo, esperando..."
           sleep 2
         done
-        echo "MySQL is ready!"
+        
+    - name: Verify MySQL connection
+      run: |
+        echo "Verificando conexión a MySQL..."
+        mysql -h 127.0.0.1 -P 3306 -u root -p"${{ secrets.DB_PASS }}" -e "SHOW DATABASES;"
+        
+    - name: Create test database
+      run: |
+        echo "Creando base de datos de pruebas..."
+        mysql -h 127.0.0.1 -P 3306 -u root -p"${{ secrets.DB_PASS }}" -e "CREATE DATABASE IF NOT EXISTS agrocloud_test CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;"
         
     - name: Run tests
-      run: mvn test -Dspring.profiles.active=test
+      run: mvn test -Dspring.profiles.active=test -Dspring.datasource.url=jdbc:mysql://127.0.0.1:3306/agrocloud_test?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
       env:
         DB_USER: ${{ secrets.DB_USER }}
         DB_PASS: ${{ secrets.DB_PASS }}
