fix: Corregir configuración de MySQL en GitHub Actions para evitar ApplicationContext failure
- maven-tests.yml: Usar credenciales hardcodeadas (root/123456) en lugar de secrets
- application-test.properties: Usar variables de entorno DB_USER y DB_PASS
- Agregar configuración adicional para tests: hibernate.ddl-auto=create-drop
- Configurar spring.jpa.defer-datasource-initialization=false

Corrige: ApplicationContext failure threshold exceeded
Ahora los tests pueden conectarse correctamente a MySQL en GitHub Actions

--- a/.github/workflows/maven-tests.yml
+++ b/.github/workflows/maven-tests.yml
@@ -62,8 +62,8 @@ jobs:
       run: mvn test -Dspring.profiles.active=test
       working-directory: ./agrogestion-backend
       env:
-        DB_USER: ${{ secrets.DB_USER }}
-        DB_PASS: ${{ secrets.DB_PASS }}
+        DB_USER: root
+        DB_PASS: 123456
         
     - name: Generate test reports
       run: mvn jacoco:report
