--- a/agrogestion-backend/src/test/resources/application-test.properties
+++ b/agrogestion-backend/src/test/resources/application-test.properties
@@ -9,8 +9,8 @@ server.port=8081
 # Configuración de la base de datos MySQL para pruebas
 spring.datasource.url=jdbc:mysql://localhost:3306/agrocloud_test?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASS:123456}
 
 # Configuración del pool de conexiones para pruebas
 spring.datasource.hikari.maximum-pool-size=5
@@ -68,3 +68,8 @@ spring.jpa.defer-datasource-initialization=true
 # Configuración para evitar problemas de inicialización
 spring.main.lazy-initialization=true
 spring.jpa.open-in-view=false
+
+# Configuración adicional para tests
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.hbm2ddl.auto=create-drop
+spring.jpa.defer-datasource-initialization=false
