--- a/agrogestion-backend/src/test/resources/application-test.properties
+++ b/agrogestion-backend/src/test/resources/application-test.properties
@@ -12,18 +12,28 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASS:123456}
 
-# Configuración del pool de conexiones para pruebas
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=1200000
-spring.datasource.hikari.connection-timeout=20000
+# Configuración del pool de conexiones para pruebas - OPTIMIZADA
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=300000
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.leak-detection-threshold=60000
 
-# Configuración de JPA/Hibernate para pruebas
+# Configuración de JPA/Hibernate para pruebas - OPTIMIZADA
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+
+# Optimizaciones de rendimiento para tests
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=false
+spring.jpa.properties.hibernate.connection.autocommit=false
 
 # Configuración para ejecutar scripts SQL de inicialización
 spring.sql.init.mode=never
@@ -33,11 +43,14 @@ jwt.secret=testSecretKeyForJWTTokenGenerationAndValidationInTests
 jwt.expiration=3600000
 jwt.refresh-token.expiration=7200000
 
-# Configuración de logging para pruebas
-logging.level.com.agrocloud=DEBUG
-logging.level.org.springframework.security=WARN
-logging.level.org.hibernate.SQL=WARN
-logging.level.org.springframework.test=DEBUG
+# Configuración de logging para pruebas - OPTIMIZADA
+logging.level.com.agrocloud=WARN
+logging.level.org.springframework.security=ERROR
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.springframework.test=WARN
+logging.level.org.springframework.boot.test=ERROR
+logging.level.org.springframework.test.context=ERROR
+logging.level.org.springframework.transaction=ERROR
 
 # Configuración de validación
 spring.validation.enabled=true
@@ -66,10 +79,10 @@ spring.test.database.replace=none
 spring.jpa.defer-datasource-initialization=true
 
 # Configuración para evitar problemas de inicialización
-spring.main.lazy-initialization=true
+spring.main.lazy-initialization=false
 spring.jpa.open-in-view=false
 
 # Configuración adicional para tests
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.hbm2ddl.auto=create-drop
 spring.jpa.defer-datasource-initialization=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
