Dockerfile simplificado para Railway - Solución alternativa
 Cambios:
- Dockerfile.simple: Single-stage build (más simple)
- Dockerfile: Multistage simplificado (sin usuario no-root)
- railway.json: Usa Dockerfile.simple
- .dockerignore: Simplificado

 Soluciona: Problemas de contexto de build en Railway
 Single-stage: Maven + Runtime en una sola imagen

--- a/agrogestion-backend/Dockerfile
+++ b/agrogestion-backend/Dockerfile
@@ -1,5 +1,5 @@
 # ============================================================
-# DOCKERFILE MULTISTAGE - Spring Boot para Railway
+# DOCKERFILE SIMPLIFICADO - Spring Boot para Railway
 # AgroGestion Backend
 # ============================================================
 
@@ -31,21 +31,11 @@ FROM eclipse-temurin:17-jre-alpine AS runtime
 # Instalar herramientas necesarias
 RUN apk add --no-cache wget
 
-# Crear usuario no-root para seguridad
-RUN addgroup -g 1001 -S appgroup && \
-    adduser -u 1001 -S appuser -G appgroup
-
 # Establecer directorio de trabajo
 WORKDIR /app
 
 # Copiar el JAR desde la etapa de build
 COPY --from=build /app/target/*.jar app.jar
-
-# Cambiar ownership al usuario no-root
-RUN chown -R appuser:appgroup /app
-
-# Cambiar al usuario no-root
-USER appuser
 
 # Exponer puerto
 EXPOSE 8080
