--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -1,30 +1,28 @@
-# Dockerfile simple para Railway
+# Etapa 1: Build
 FROM maven:3.9.5-eclipse-temurin-17 AS build
-
-# Establecer el directorio de trabajo
 WORKDIR /app
 
-# Copiar los archivos de configuración de Maven desde la subcarpeta
+# 1️⃣ Copiar solo pom.xml y bajar dependencias
 COPY agrogestion-backend/pom.xml .
+RUN mvn dependency:go-offline -B
 
-# Copiar el código fuente
+# 2️⃣ Copiar código fuente
 COPY agrogestion-backend/src ./src
 
-# Compilar la aplicación con Maven
-RUN mvn clean package -DskipTests && ls -la target/
+# 3️⃣ Compilar el proyecto sin tests
+RUN mvn clean package -DskipTests
 
-# Segunda etapa: Runtime
+# Etapa 2: Runtime
 FROM eclipse-temurin:17-jre-alpine
-
 WORKDIR /app
 
 # Instalar wget para healthcheck
 RUN apk add --no-cache wget
 
-# Copiar el JAR compilado desde la etapa de build
+# Copiar jar compilado desde la etapa de build
 COPY --from=build /app/target/*.jar app.jar
 
-# Exponer el puerto que usará la app
+# Exponer puerto
 EXPOSE 8080
 
 # Healthcheck
