--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -3,11 +3,11 @@ FROM maven:3.9.5-eclipse-temurin-17 AS build
 WORKDIR /app
 
 # 1️⃣ Copiar solo pom.xml y bajar dependencias
-COPY pom.xml .
+COPY agrogestion-backend/pom.xml .
 RUN mvn dependency:go-offline -B
 
-# 2️⃣ Copiar código fuente
-COPY src ./src
+# 2️⃣ Copiar código fuente desde la subcarpeta
+COPY agrogestion-backend/src ./src
 
 # 3️⃣ Compilar el proyecto sin tests
 RUN mvn clean package -DskipTests
@@ -19,15 +19,12 @@ WORKDIR /app
 # Instalar wget para healthcheck
 RUN apk add --no-cache wget
 
-# Copiar jar compilado desde la etapa de build
+# Copiar jar compilado
 COPY --from=build /app/target/*.jar app.jar
 
-# Exponer puerto
 EXPOSE 8080
 
-# Healthcheck
 HEALTHCHECK --interval=30s --timeout=15s --start-period=60s --retries=3 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:${PORT:-8080}/ || exit 1
 
-# Ejecutar la aplicación
 CMD ["java", "-Dspring.profiles.active=railway-mysql", "-jar", "app.jar"]
