--- a/agrogestion-backend/src/main/resources/application.properties
+++ b/agrogestion-backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 spring.profiles.active=mysql
 
 # Configuración del servidor
-server.port=8080
+server.port=${PORT:8080}
 server.servlet.context-path=/
 
 # Configuración de la base de datos MySQL para desarrollo local (XAMPP)
