feat: Agregar health check endpoint y paginación completa - Habilitar /actuator/health para Railway - Agregar paginación a todos los componentes principales - Corregir rutas API duplicadas - Agregar componente AyudaSistema - Mejorar filtros y búsqueda en listados

--- a/agrogestion-frontend/package.json
+++ b/agrogestion-frontend/package.json
@@ -7,7 +7,11 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check-api-routes": "node scripts/check-api-routes.js",
+    "check-api-routes:win": "powershell -ExecutionPolicy Bypass -File scripts/check-api-routes.ps1",
+    "check-api-routes:unix": "bash scripts/check-api-routes.sh",
+    "lint:api": "npm run check-api-routes"
   },
   "devDependencies": {
     "@types/react": "^19.1.10",
