--- a/agrogestion-backend/src/main/resources/application-railway.properties
+++ b/agrogestion-backend/src/main/resources/application-railway.properties
@@ -12,11 +12,18 @@ spring.datasource.username=${DB_USERNAME:sa}
 spring.datasource.password=${DB_PASSWORD:}
 
 # Configuración de JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.H2Dialect}
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
+
+# Flyway - Migraciones de base de datos
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.validate-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+spring.sql.init.mode=never
 
 # Configuración de H2 (para fallback)
 spring.h2.console.enabled=true
