--- a/agrogestion-backend/pom.xml
+++ b/agrogestion-backend/pom.xml
@@ -104,6 +104,20 @@
             <artifactId>jackson-datatype-hibernate5-jakarta</artifactId>
         </dependency>
 
+        <!-- Apache PDFBox para generar PDFs del EULA -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
+        <!-- Commons IO para manejo de archivos -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.15.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
