feat: Agregar cambios adicionales a rama testing - Mejoras en componentes de gestión - Actualizaciones de configuración - Documentación y scripts de utilidad

--- a/agrogestion-backend/src/main/resources/application-agrocloud.properties
+++ b/agrogestion-backend/src/main/resources/application-agrocloud.properties
@@ -8,10 +8,15 @@ server.port=8080
 server.servlet.context-path=/
 
 # Configuración de la base de datos MySQL para desarrollo local (XAMPP)
+# Nota: En desarrollo local, SSL puede no estar disponible. En producción siempre usar SSL.
 spring.datasource.url=jdbc:mysql://localhost:3306/agrocloud?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=agrocloudbd
-spring.datasource.password=Jones1212
+spring.datasource.username=${DB_USERNAME:agrocloudbd}
+spring.datasource.password=${DB_PASSWORD:Jones1212}
+
+# Configuración de seguridad HikariCP para desarrollo
+spring.datasource.hikari.data-source-properties.sslMode=DISABLED
+spring.datasource.hikari.data-source-properties.allowPublicKeyRetrieval=true
 
 # Configuración de JPA/Hibernate para MySQL
 spring.jpa.hibernate.ddl-auto=none
