--- a/agrogestion-backend/src/main/resources/application-railway-mysql.properties
+++ b/agrogestion-backend/src/main/resources/application-railway-mysql.properties
@@ -7,11 +7,19 @@
 server.port=${PORT:8080}
 server.servlet.context-path=/
 
-# Configuración de la base de datos MySQL para Railway
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://mysql.railway.internal:3306/railway?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+# Configuración de la base de datos MySQL para Railway con SSL/TLS
+# Nota: Railway puede requerir configuración específica de SSL
+# Si hay problemas de conexión, usar useSSL=false temporalmente para debugging
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://mysql.railway.internal:3306/railway?useSSL=true&requireSSL=true&verifyServerCertificate=false&serverTimezone=UTC&enabledTLSProtocols=TLSv1.2,TLSv1.3&allowPublicKeyRetrieval=true}
 spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:com.mysql.cj.jdbc.Driver}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+# Configuración de seguridad HikariCP
+spring.datasource.hikari.data-source-properties.sslMode=${DB_SSL_MODE:REQUIRED}
+spring.datasource.hikari.data-source-properties.allowPublicKeyRetrieval=true
+spring.datasource.hikari.data-source-properties.useSSL=true
+spring.datasource.hikari.data-source-properties.requireSSL=true
 
 # Configuración del pool de conexiones HikariCP (optimizado para Railway)
 spring.datasource.hikari.maximum-pool-size=5
@@ -39,10 +47,14 @@ jwt.expiration=86400000
 jwt.refresh-token.expiration=604800000
 
 # Configuración de logging (menos verbose para Railway)
+# IMPORTANTE: No exponer datos sensibles en logs
 logging.level.com.agrocloud=INFO
 logging.level.org.springframework.security=WARN
 logging.level.org.hibernate.SQL=WARN
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=OFF
 logging.level.org.springframework.web=WARN
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # Configuración de OpenAPI/Swagger
 springdoc.api-docs.path=/v3/api-docs
