feat: Sistema recuperacion contraseña con email Zoho Mail

--- a/agrogestion-backend/src/main/resources/application-prod.properties
+++ b/agrogestion-backend/src/main/resources/application-prod.properties
@@ -50,9 +50,26 @@ jwt.expiration=${JWT_EXPIRATION:86400000}
 cors.allowed.origins=${FRONTEND_URL:https://app.tudominio.com}
 
 # Email Service URLs
-email.frontend.url=${FRONTEND_URL:https://app.tudominio.com}
-email.reset.password.url=${FRONTEND_URL:https://app.tudominio.com}/reset-password
-email.verify.email.url=${FRONTEND_URL:https://app.tudominio.com}/verify-email
+email.frontend.url=${FRONTEND_URL:https://agrocloud.com.ar}
+email.reset.password.url=${FRONTEND_URL:https://agrocloud.com.ar}/reset-password
+email.verify.email.url=${FRONTEND_URL:https://agrocloud.com.ar}/verify-email
+
+# ========================================
+# CONFIGURACIÓN DE EMAIL SMTP - ZOHO MAIL
+# ========================================
+# Configurar usando variables de entorno para producción
+# Cuenta: info@AgroCloud.com.ar
+spring.mail.host=${MAIL_HOST:smtp.zoho.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:info@AgroCloud.com.ar}
+spring.mail.password=${MAIL_PASSWORD:}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.from=${MAIL_FROM:info@AgroCloud.com.ar}
 
 # Configuración de archivos
 spring.servlet.multipart.max-file-size=10MB
