--- a/agrogestion-backend/src/main/resources/application.properties
+++ b/agrogestion-backend/src/main/resources/application.properties
@@ -88,3 +88,62 @@ spring.session.store-type=none
 
 # Permitir referencias circulares temporalmente
 spring.main.allow-circular-references=true
+
+# ========================================
+# CONFIGURACIÓN DE EMAIL
+# ========================================
+# Descomentar y configurar según tu proveedor de email
+
+# Opción 1: Gmail (Recomendado para desarrollo)
+# IMPORTANTE: Usar Contraseña de aplicación, no tu contraseña normal
+# spring.mail.host=smtp.gmail.com
+# spring.mail.port=587
+# spring.mail.username=tu-email@gmail.com
+# spring.mail.password=tu-app-password-gmail
+# spring.mail.properties.mail.smtp.auth=true
+# spring.mail.properties.mail.smtp.starttls.enable=true
+# spring.mail.properties.mail.smtp.starttls.required=true
+# spring.mail.from=tu-email@gmail.com
+
+# Opción 2: SendGrid (Recomendado para producción)
+# spring.mail.host=smtp.sendgrid.net
+# spring.mail.port=587
+# spring.mail.username=apikey
+# spring.mail.password=SG.tu-api-key-de-sendgrid
+# spring.mail.properties.mail.smtp.auth=true
+# spring.mail.properties.mail.smtp.starttls.enable=true
+# spring.mail.from=noreply@tudominio.com
+
+# Opción 3: Mailtrap (Solo para testing)
+# spring.mail.host=smtp.mailtrap.io
+# spring.mail.port=2525
+# spring.mail.username=tu-username-mailtrap
+# spring.mail.password=tu-password-mailtrap
+# spring.mail.properties.mail.smtp.auth=true
+# spring.mail.from=noreply@agrocloud.com
+
+# Opción 4: Zoho Mail (Producción - AgroCloud)
+# IMPORTANTE: Si la contraseña tiene caracteres especiales (&, #, @, etc.), 
+# considera usar una Contraseña de Aplicación de Zoho
+spring.mail.host=smtp.zoho.com
+spring.mail.port=587
+spring.mail.username=info@AgroCloud.com.ar
+spring.mail.password=XJa6LFJepdHm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+spring.mail.properties.mail.smtp.ssl.trust=smtp.zoho.com
+# Habilitar debug de email para diagnóstico (cambiar a false en producción)
+spring.mail.properties.mail.debug=false
+spring.mail.from=info@AgroCloud.com.ar
+
+# Opción alternativa: Si el puerto 587 no funciona, descomenta esta configuración SSL:
+# spring.mail.port=465
+# spring.mail.properties.mail.smtp.ssl.enable=true
+# spring.mail.properties.mail.smtp.starttls.enable=false
+
+# URL del frontend para enlaces en emails
+email.frontend.url=https://agrocloud.com.ar
